--- a/README.adoc
+++ b/README.adoc
@@ -1,9 +1,7 @@
 = start.spring.io image:https://badges.gitter.im/spring-io/initializr.svg[link="https://gitter.im/spring-io/initializr?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge"]
 :library: https://github.com/spring-io/initializr
 
-Change again - after adding Jenkins trigger for SCM changes in https://github.com/aitstra61/spring-boot
-alsdkjf;lkasjd;flkajsd;lfkja;ldkjsf;ldjs;flkjasdlfkjalsdkj
-
+change again - like maybe # 6???
 
 This repository configures a {library}[Spring Initializr] instance with a custom UI
 running at https://start.spring.io. The following modules are available:
